# routes/index.js
@@ -13,5 +13,7 @@ router.use('/events', require('./events'));
 router.use("/user", userRoutes);
 router.use("/tasks", require("./tasks"));
 
+//router for location routes
+router.use("/location", require("./location"));
 
 module.exports = router;
